<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:id="@+id/textViewC110"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/C110" />

    <TextView
        android:id="@+id/textViewC203"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/C203" />

    <TextView
        android:id="@+id/textViewC206"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/C206" />

    <TextView
        android:id="@+id/textViewC218"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/C218" />

    <TextView
        android:id="@+id/textViewC346"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/C346" />

    <TextView
        android:id="@+id/textViewG953"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/G953" />

</LinearLayout>
